--- a/lib/app_web/controllers/page_html/home.html.heex
+++ b/lib/app_web/controllers/page_html/home.html.heex
@@ -1,6 +1,27 @@
-<div class="flex-col content-start md:content-center h-screen ">
-  <div class="mx-auto max-w-80 min-h-96 bg-blue-300 sm:bg-lime-300 md:bg-red-300 border
-  border-gray-700 rounded-lg p-4 py-6 shadow-lg">
-    Content
+<h1>Ashley Albert</h1>
+<p>I am a Computer Science major graduating on May 18, 2025 from Bucknell University. Fun Fact:  I was born in Lewisburg, PA (which means I was always meant to come to Bucknell...right?). In my free time I enjoy spending time with family and friends or shooting pool!</p>
+<img src="/images/SeniorPortrait.jpg" alt="High school senior portrait of Ashley Albert, female, blonde hair worn down, black off the shoulder drape, gold small cross necklace">
+<ol>
+  <li>Python</li>
+  <li>JavaScript</li>
+  <li>Java</li>
+  <li>C</li>
+  <li>R</li>
+  <li>Haskell</li>
+  <li>Prolog</li>
+  <li>C#</li>
+  <li>C++</li>
+  <li>PHP</li>
+  <li>RISC-V</li>
+  <li>HTML</li>
+  <li>CSS</li>
+</ol>
+
+<nav class="bg-gray-800 p-4">
+  <div class="container mx-auto flex justify-between items-center">
+    <div class="space-x-4">
+      <a href={~p"/planets"} class="text-gray-300 hover:text-white">Planets</a>
+      <a href={~p"/courses"} class="text-gray-300 hover:text-white">Courses</a>
+    </div>
   </div>
-</div>
+</nav>
