--- a/lib/app_web/controllers/planet_html/show.html.heex
+++ b/lib/app_web/controllers/planet_html/show.html.heex
@@ -1,3 +1,13 @@
+<nav class="bg-gray-800 p-4 fixed top-0 left-0 w-full">
+    <div class="max-w-7x1 mx-auto flex justify-between items-center">
+      <h1 class="text-white text-xl font-bold">Ashley Albert</h1>
+      <div class="space-x-4">
+        <a href={~p"/courses"} class="text-gray-300 hover:text-white">Courses</a>
+        <a href={~p"/"} class="text-gray-300 hover:text-white">Home</a>
+      </div>
+    </div>
+  </nav>
+
 <div class="max-w-3xl mx-auto mt-5">
   <div class="overflow-hidden bg-white shadow sm:rounded-lg">
     <div class="px-4 py-5 sm:px-6">
