--- a/lib/app_web/controllers/planet_html/list.html.heex
+++ b/lib/app_web/controllers/planet_html/list.html.heex
@@ -1,3 +1,13 @@
+<nav class="bg-gray-800 p-4 fixed top-0 left-0 w-full">
+    <div class="max-w-7x1 mx-auto flex justify-between items-center">
+      <h1 class="text-white text-xl font-bold">Ashley Albert</h1>
+      <div class="space-x-4">
+        <a href={~p"/courses"} class="text-gray-300 hover:text-white">Courses</a>
+        <a href={~p"/"} class="text-gray-300 hover:text-white">Home</a>
+      </div>
+    </div>
+  </nav>
+
 <div class="overflow-x-auto">
   <h2 class="text-2xl font-semibold text-gray-800 mb-4">All Planets' Details</h2>
   <table class="min-w-full table-auto text-sm text-left text-gray-500">
