--- a/lib/app_web/controllers/page_html/home.html.heex
+++ b/lib/app_web/controllers/page_html/home.html.heex
@@ -19,7 +19,7 @@
 
   <div class="container mx-auto px-4 py-8">
     <div class="bg-white shadow-lg rounded-xl p-6 md:p-10 text-center">
-      <img src="/images/SeniorPortrait.jpg" alt="High school senior portrait of Ashley Albert"
+      <img src="/csci379-25s-a/images/SeniorPortrait.jpg" alt="High school senior portrait of Ashley Albert"
            class="w-48 h-48 mx-auto rounded-full border-4 border-gray-300 shadow-md object-cover">
       <p class="mt-6 text-lg md:text-xl">
         <strong>About Me:</strong>  I am a Computer Science major graduating on May 18, 2025 from Bucknell University. I grew up in Coal Township, PA and went to Our Lady of Lourdes Regional School. In my free time, I enjoy spending time with family and friends or shooting pool! My favorite song to listen to is The Sweet Escape by Gwen Stefani.<br><br>
