--- a/lib/app_web/controllers/page_html/home.html.heex
+++ b/lib/app_web/controllers/page_html/home.html.heex
@@ -30,19 +30,32 @@
     <div class="mt-8 bg-white shadow-lg rounded-xl p-6 md:p-10">
       <h2 class="text-2xl font-semibold text-center text-gray-700">Programming Languages</h2>
       <ol class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 mt-4 text-center">
-        <li class="bg-gray-200 rounded-lg py-2">Python</li>
-        <li class="bg-gray-200 rounded-lg py-2">JavaScript</li>
-        <li class="bg-gray-200 rounded-lg py-2">Java</li>
-        <li class="bg-gray-200 rounded-lg py-2">C</li>
-        <li class="bg-gray-200 rounded-lg py-2">R</li>
-        <li class="bg-gray-200 rounded-lg py-2">Haskell</li>
-        <li class="bg-gray-200 rounded-lg py-2">Prolog</li>
-        <li class="bg-gray-200 rounded-lg py-2">C#</li>
-        <li class="bg-gray-200 rounded-lg py-2">C++</li>
-        <li class="bg-gray-200 rounded-lg py-2">PHP</li>
-        <li class="bg-gray-200 rounded-lg py-2">RISC-V</li>
-        <li class="bg-gray-200 rounded-lg py-2">HTML</li>
-        <li class="bg-gray-200 rounded-lg py-2">CSS</li>
+        <li class="bg-gray-200 rounded-lg py-2">
+        <span class="font-semibold" style="color: #001F3F;">Python</span></li>
+        <li class="bg-gray-200 rounded-lg py-2">
+        <span class="font-semibold" style="color: #001F3F;">JavaScript</span></li>
+        <li class="bg-gray-200 rounded-lg py-2">
+        <span class="font-semibold" style="color: #001F3F;">Java</span></li>
+        <li class="bg-gray-200 rounded-lg py-2">
+        <span class="font-semibold" style="color: #001F3F;">C</span></li>
+        <li class="bg-gray-200 rounded-lg py-2">
+        <span class="font-semibold" style="color: #001F3F;">R</span></li>
+        <li class="bg-gray-200 rounded-lg py-2">
+        <span class="font-semibold" style="color: #001F3F;">Haskell</span></li>
+        <li class="bg-gray-200 rounded-lg py-2">
+        <span class="font-semibold" style="color: #001F3F;">Prolog</span></li>
+        <li class="bg-gray-200 rounded-lg py-2">
+        <span class="font-semibold" style="color: #001F3F;">C#</span></li>
+        <li class="bg-gray-200 rounded-lg py-2">
+        <span class="font-semibold" style="color: #001F3F;">C++</span></li>
+        <li class="bg-gray-200 rounded-lg py-2">
+        <span class="font-semibold" style="color: #001F3F;">PHP</span></li>
+        <li class="bg-gray-200 rounded-lg py-2">
+        <span class="font-semibold" style="color: #001F3F;">RISC-V</span></li>
+        <li class="bg-gray-200 rounded-lg py-2">
+        <span class="font-semibold" style="color: #001F3F;">HTML</span></li>
+        <li class="bg-gray-200 rounded-lg py-2">
+        <span class="font-semibold" style="color: #001F3F;">CSS</span></li>
       </ol>
     </div>
   </div>
