--- a/lib/app_web/controllers/page_html/home.html.heex
+++ b/lib/app_web/controllers/page_html/home.html.heex
@@ -10,6 +10,8 @@
   <nav class="bg-gray-800 p-4">
     <div class="container mx-auto flex justify-between items-center">
       <h1 class="text-white text-xl font-bold">Ashley Albert</h1>
+      <.button>Button</.button>
+      <.badge color="pink">Badge</.badge>
       <div class="space-x-4">
         <a href={~p"/planets"} class="text-gray-300 hover:text-white">Planets</a>
         <a href={~p"/courses"} class="text-gray-300 hover:text-white">Courses</a>
