--- a/lib/app_web/controllers/page_html/home.html.heex
+++ b/lib/app_web/controllers/page_html/home.html.heex
@@ -64,7 +64,7 @@
     <h2 class="text-2xl font-semibold text-gray-700 mb-4">Badges & Buttons</h2>
 
     <div class="flex flex-wrap justify-center gap-4 mb-4">
-      <.button>Basic Button</.button>
+      <.button onclick="toggleDarkMode()">Toggle Dark Mode</.button>
     </div>
     <div class="flex flex-wrap justify-center gap-2">
       <.badge color="default" large>default</.badge>
