--- a/lib/app_web/components/layouts/app.html.heex
+++ b/lib/app_web/components/layouts/app.html.heex
@@ -1,4 +1,4 @@
-<header class="px-4 sm:px-6 lg:px-8">
+<%!-- <header class="px-4 sm:px-6 lg:px-8">
   <div class="flex items-center justify-between border-b border-zinc-100 py-3 text-sm">
     <div class="flex items-center gap-4">
       <a href="/">
@@ -23,10 +23,51 @@
       </a>
     </div>
   </div>
-</header>
+</header> --%>
+<nav class="bg-gray-800 p-4 dark:bg-gray-300">
+    <div class="container mx-auto flex justify-between items-center">
+      <h1 class="text-white text-xl font-bold dark:text-black">Ashley Albert</h1>
+      <div class="space-x-4">
+        <a href={~p"/"} class="text-gray-300 hover:text-white dark:text-gray-900 dark:hover:text-black">Home</a>
+        <a href={~p"/planets"} class="text-gray-300 hover:text-white dark:text-gray-900 dark:hover:text-black">Planets</a>
+        <a href={~p"/courses"} class="text-gray-300 hover:text-white dark:text-gray-900 dark:hover:text-black">Courses</a>
+      </div>
+      <div class="flex items-center md:order-2 space-x-2 rtl:space-x-reverse px-2">
+        <button
+          type="button"
+          onclick="toggleDarkMode()"
+          class="[
+            items-center w-10 h-10 justify-center text-normal font-medium
+          text-gray-700 rounded-lg hover:text-blue-700 focus-visible:z-10
+            focus-visible:ring-2 focus-visible:ring-gray-300 dark:focus-visible:ring-gray-500
+            focus:outline-none dark:text-gray-400 dark:border-gray-600
+            dark:hover:text-white,
+            @user_id && 'hidden sm:flex'
+            ]">
+        <svg
+          data-toggle-icon="moon"
+          class="W-4 h-4 dark:hidden"
+          aria-hidden="true"
+          fill="currentColor"
+          viewBox="0 0 18 20">
+        <path d="M17.8 13.75a1 1 0 0 0-.859-.5A7.488 7.488 0 0 1 10.52 2a1 1 0 0 0 0-.969A1.035 1.035 0 0 0 9.687.5h-.113a9.5 9.5 0 1 0 8.222 14.247 1 1 0 0 0 .004-.997Z"></path></svg>
+        <svg
+          data-toggle-icon="sun"
+          class="hidden dark:block w-4 h-4"
+          aria-hidden="true"
+          fill="currentColor"
+          viewBox="0 0 20 20">
+        <path d="M10 15a5 5 0 1 0 0-10 5 5 0 0 0 0 10Zm0-11a1 1 0 0 0 1-1V1a1 1 0 0 0-2 0v2a1 1 0 0 0 1 1Zm0 12a1 1 0 0 0-1 1v2a1 1 0 1 0 2 0v-2a1 1 0 0 0-1-1ZM4.343 5.757a1 1 0 0 0 1.414-1.414L4.343 2.929a1 1 0 0 0-1.414 1.414l1.414 1.414Zm11.314 8.486a1 1 0 0 0-1.414 1.414l1.414 1.414a1 1 0 0 0 1.414-1.414l-1.414-1.414ZM4 10a1 1 0 0 0-1-1H1a1 1 0 0 0 0 2h2a1 1 0 0 0 1-1Zm15-1h-2a1 1 0 1 0 0 2h2a1 1 0 0 0 0-2ZM4.343 14.243l-1.414 1.414a1 1 0 1 0 1.414 1.414l1.414-1.414a1 1 0 0 0-1.414-1.414ZM14.95 6.05a1 1 0 0 0 .707-.293l1.414-1.414a1 1 0 1 0-1.414-1.414l-1.414 1.414a1 1 0 0 0 .707 1.707Z">
+          </path></svg>
+        </button>
+      </div>
+    </div>
+  </nav>
 <main class="px-4 py-20 sm:px-6 lg:px-8">
   <div class="mx-auto max-w-2xl">
     <.flash_group flash={@flash} />
     {@inner_content}
   </div>
 </main>
+
+
