--- a/lib/app_web/controllers/page_html/courses.html.heex
+++ b/lib/app_web/controllers/page_html/courses.html.heex
@@ -1,28 +1,19 @@
- <nav class="bg-gray-800 p-4">
-    <div class="container mx-auto flex justify-between items-center">
-      <h1 class="text-white text-xl font-bold">Ashley Albert</h1>
-      <div class="space-x-4">
-        <a href={~p"/planets"} class="text-gray-300 hover:text-white">Planets</a>
-        <a href={~p"/"} class="text-gray-300 hover:text-white">Home</a>
-      </div>
-    </div>
-  </nav>
-
 <div class="max-w-6xl mx-auto p-6">
-  <h1 class="text-2xl font-bold text-gray-900 mb-4">Ashley's Courses</h1>
+  <h1 class="text-2xl font-bold text-gray-900 mb-4 dark:text-gray-100">Ashley's Courses</h1>
 
-  <table class="min-w-full table-auto border-collapse border border-gray-200 shadow-lg rounded-lg overflow-hidden">
-    <thead class="bg-gray-100">
+  <table class="min-w-full table-auto border-collapse border border-gray-200 shadow-lg rounded-lg overflow-hidden dark:border-gray-600">
+    <thead class="bg-gray-100 dark:bg-gray-700">
       <tr>
-        <th class="px-4 py-2 text-left text-sm font-semibold text-gray-700">Semester</th>
-        <th class="px-4 py-2 text-left text-sm font-semibold text-gray-700">Course</th>
+        <th class="px-4 py-2 text-left text-sm font-semibold text-gray-700 dark:text-gray-300">Semester</th>
+        <th class="px-4 py-2 text-left text-sm font-semibold text-gray-700 dark:text-gray-300">Course</th>
       </tr>
     </thead>
     <tbody>
       <%= for {course, name} <- Enum.flat_map(@courses, fn course -> Enum.map(course.name, &{course.semester, &1}) end) do %>
-        <tr class="bg-white border-b hover:bg-gray-50">
-          <td class="px-4 py-3 text-sm text-gray-800"><%= course %></td>
-          <td class="px-4 py-3 text-sm text-gray-600"><%= name %></td>
+        <tr class="bg-white border-b hover:bg-gray-50 dark:bg-gray-800
+        dark:hover:bg-gray-700 dark:border-gray-600">
+          <td class="px-4 py-3 text-sm text-gray-800 dark:text-gray-200"><%= course %></td>
+          <td class="px-4 py-3 text-sm text-gray-600 dark:text-gray-400"><%= name %></td>
         </tr>
       <% end %>
     </tbody>
