--- a/lib/app_web/controllers/page_html/error.html.heex
+++ b/lib/app_web/controllers/page_html/error.html.heex
@@ -1,5 +1,5 @@
 <%= if @error do %>
-  <div class="max-w-lg mx-auto p-4 bg-red-100 border-l-4 border-red-500 text-red-700 rounded-md shadow-md mb-6">
+  <div class="max-w-lg mx-auto p-4 bg-red-100 border-l-4 border-red-500 text-red-700 rounded-md shadow-md mb-6 dark:bg-gray-800">
     <p class="text-lg font-semibold"><%= @error %></p>
   </div>
 <% end %>
