--- a/lib/app_web/controllers/planet_html/list.html.heex
+++ b/lib/app_web/controllers/planet_html/list.html.heex
@@ -1,17 +1,18 @@
-<nav class="bg-gray-800 p-4 fixed top-0 left-0 w-full">
+<%!-- <nav class="bg-gray-800 p-4 fixed top-0 left-0 w-full dark:bg-gray-300">
     <div class="max-w-7x1 mx-auto flex justify-between items-center">
-      <h1 class="text-white text-xl font-bold">Ashley Albert</h1>
+      <h1 class="text-white text-xl font-bold dark:text-black">Ashley Albert</h1>
       <div class="space-x-4">
-        <a href={~p"/courses"} class="text-gray-300 hover:text-white">Courses</a>
-        <a href={~p"/"} class="text-gray-300 hover:text-white">Home</a>
+        <a href={~p"/courses"} class="text-gray-300 hover:text-white dark:text-gray-900 dark:hover:text-black">Courses</a>
+        <a href={~p"/"} class="text-gray-300 hover:text-white dark:text-gray-900 dark:hover:text-black">Home</a>
       </div>
     </div>
-  </nav>
+  </nav> --%>
 
 <div class="overflow-x-auto">
-  <h2 class="text-2xl font-semibold text-gray-800 mb-4">All Planets' Details</h2>
-  <table class="min-w-full table-auto text-sm text-left text-gray-500">
-    <thead class="text-xs text-gray-700 uppercase bg-gray-50">
+  <h2 class="text-2xl font-semibold text-gray-800 mb-4 dark:text-gray-100">All Planets' Details</h2>
+  <table class="min-w-full table-auto text-sm text-left text-gray-500 dark:text-gray-400">
+    <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700
+    dark:text-gray-300">
       <tr>
         <th class="px-6 py-3">ID</th>
         <th class="px-6 py-3">Name</th>
@@ -21,7 +22,7 @@
     </thead>
     <tbody>
       <%= for planet <- @planets do %>
-        <tr class="bg-white border-b hover:bg-gray-50">
+        <tr class="bg-white border-b hover:bg-gray-50 dark:bg-gray-800 dark:border-gray-600 dark:hover:bg-gray-700">
           <td class="px-6 py-4"><%= planet.id %></td>
           <td class="px-6 py-4"><%= planet.name %></td>
           <td class="px-6 py-4"><%= planet.distance %></td>
