--- a/lib/app_web/controllers/planet_html/show.html.heex
+++ b/lib/app_web/controllers/planet_html/show.html.heex
@@ -1,36 +1,36 @@
-<nav class="bg-gray-800 p-4 fixed top-0 left-0 w-full">
+<%!-- <nav class="bg-gray-800 p-4 fixed top-0 left-0 w-full dark:bg-gray-300">
     <div class="max-w-7x1 mx-auto flex justify-between items-center">
-      <h1 class="text-white text-xl font-bold">Ashley Albert</h1>
+      <h1 class="text-white text-xl font-bold dark:text-black">Ashley Albert</h1>
       <div class="space-x-4">
-        <a href={~p"/courses"} class="text-gray-300 hover:text-white">Courses</a>
-        <a href={~p"/"} class="text-gray-300 hover:text-white">Home</a>
+        <a href={~p"/courses"} class="text-gray-300 hover:text-white dark:text-gray-900 dark:hover:text-black">Courses</a>
+        <a href={~p"/"} class="text-gray-300 hover:text-white dark:text-gray-900 dark:hover:text-black">Home</a>
       </div>
     </div>
-  </nav>
+  </nav> --%>
 
 <div class="max-w-3xl mx-auto mt-5">
-  <div class="overflow-hidden bg-white shadow sm:rounded-lg">
+  <div class="overflow-hidden bg-white shadow sm:rounded-lg dark:bg-gray-800">
     <div class="px-4 py-5 sm:px-6">
-      <h3 class="text-lg font-medium text-gray-900">Planet Details</h3>
-      <p class="mt-1 max-w-2xl text-sm text-gray-500">Details about <%= @planet.name %></p>
+      <h3 class="text-lg font-medium text-gray-900 dark:text-gray-100">Planet Details</h3>
+      <p class="mt-1 max-w-2xl text-sm text-gray-500 dark:text-gray-400">Details about <%= @planet.name %></p>
     </div>
-    <div class="border-t border-gray-200">
+    <div class="border-t border-gray-200 dark:border-gray-600">
       <dl>
-        <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-          <dt class="text-sm font-medium text-gray-500">ID</dt>
-          <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= @planet.id %></dd>
+        <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6 dark:bg-gray-700">
+          <dt class="text-sm font-medium text-gray-500 dark:text-gray-400">ID</dt>
+          <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0 dark:text-gray-200"><%= @planet.id %></dd>
         </div>
-        <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-          <dt class="text-sm font-medium text-gray-500">Name</dt>
-          <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= @planet.name %></dd>
+        <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6 dark:bg-gray-800">
+          <dt class="text-sm font-medium text-gray-500 dark:text-gray-400">Name</dt>
+          <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0 dark:text-gray-200"><%= @planet.name %></dd>
         </div>
-        <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-          <dt class="text-sm font-medium text-gray-500">Distance to Sun</dt>
-          <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= @planet.distance %></dd>
+        <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6 dark:bg-gray-700">
+          <dt class="text-sm font-medium text-gray-500 dark:text-gray-400">Distance to Sun</dt>
+          <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0 dark:text-gray-200"><%= @planet.distance %></dd>
         </div>
-        <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-          <dt class="text-sm font-medium text-gray-500">Orbital Period</dt>
-          <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= @planet.orbital_period %></dd>
+        <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6 dark:bg-gray-800">
+          <dt class="text-sm font-medium text-gray-500 dark:text-gray-400">Orbital Period</dt>
+          <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0 dark:text-gray-200"><%= @planet.orbital_period %></dd>
         </div>
       </dl>
     </div>
