--- a/lib/app_web/components/layouts/app.html.heex
+++ b/lib/app_web/components/layouts/app.html.heex
@@ -27,12 +27,11 @@
 <nav class="bg-gray-800 p-4 dark:bg-gray-300">
     <div class="container mx-auto flex justify-between items-center">
       <h1 class="text-white text-xl font-bold dark:text-black">Ashley Albert</h1>
-      <div class="space-x-4">
-        <a href={~p"/"} class="text-gray-300 hover:text-white dark:text-gray-900 dark:hover:text-black">Home</a>
-        <a href={~p"/planets"} class="text-gray-300 hover:text-white dark:text-gray-900 dark:hover:text-black">Planets</a>
-        <a href={~p"/courses"} class="text-gray-300 hover:text-white dark:text-gray-900 dark:hover:text-black">Courses</a>
-      </div>
+
+      <%!-- dark mode --%>
       <div class="flex items-center md:order-2 space-x-2 rtl:space-x-reverse px-2">
+      <%!-- navbar --%>
+        <.navbar />
         <button
           type="button"
           onclick="toggleDarkMode()"
@@ -63,6 +62,7 @@
       </div>
     </div>
   </nav>
+
 <main class="px-4 py-20 sm:px-6 lg:px-8">
   <div class="mx-auto max-w-2xl">
     <.flash_group flash={@flash} />
