--- a/lib/app_web/controllers/page_html/home.html.heex
+++ b/lib/app_web/controllers/page_html/home.html.heex
@@ -5,6 +5,7 @@
   <title>Ashley Albert</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body class="bg-gray-100 text-gray-900 dark:bg-gray-900 dark:text-gray-100">
   <div class="container mx-auto px-4 py-8">
     <div class="bg-white shadow-lg rounded-xl p-6 md:p-10 text-center dark:bg-gray-800 dark:text-gray-200">
@@ -69,6 +70,14 @@
       <.tag color="red">Error Tag</.tag>
     </div>
   </div> --%>
+
+  <button type="button" phx-click={AppWeb.Components.UI.Modal.open_modal()} class="block text-white bg-blue-700 hover:bg-blue-800 font-medium rounded-lg text-sm px-5 py-2.5">
+  Toggle Modal
+</button>
+
+<.modal heading="Great Modal" backdrop="static" small>
+        This is my fantastic modal.
+      </.modal>
 
 </body>
 </html>
