--- a/lib/app_web/components/layouts/app.html.heex
+++ b/lib/app_web/components/layouts/app.html.heex
@@ -32,6 +32,22 @@
       <div class="flex items-center md:order-2 space-x-2 rtl:space-x-reverse px-2">
       <%!-- navbar --%>
         <.navbar />
+
+        <%!-- <.button phx-click="open-modal">Contact me</.button>
+        <.modal heading="My Form">
+        <.simple_form :let={f} for={@message_changeset} action={~p"/messages"} class="mb-6">
+          <.error :if={@changeset.action}>
+            Oops, something went wrong! Please check the errors below.
+          </.error>
+          <.input field={f[:email]} type="text" label="Email" />
+          <.input field={f[:subject]} type="text" label="Subject" />
+          <.input field={f[:message]} type="text" label="Message" />
+          <:actions>
+          <.button>Save Message</.button>
+          </:actions>
+        </.simple_form>
+        </.modal> --%>
+
         <button
           type="button"
           onclick="toggleDarkMode()"
