--- a/lib/app_web/controllers/page_html/home.html.heex
+++ b/lib/app_web/controllers/page_html/home.html.heex
@@ -1,57 +1,78 @@
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ashley Albert</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ashley Albert</title>
+    <script src="https://cdn.tailwindcss.com">
+    </script>
+  </head>
 
-<body class="bg-gray-100 text-gray-900 dark:bg-gray-900 dark:text-gray-100">
-  <div class="container mx-auto px-4 py-8">
-    <div class="bg-white shadow-lg rounded-xl p-6 md:p-10 text-center dark:bg-gray-800 dark:text-gray-200">
-      <img src={~p"/images/SeniorPortrait.jpg"} alt="High school senior portrait of Ashley Albert"
-           class="w-48 h-48 mx-auto rounded-full border-4 border-gray-300 shadow-md object-cover
-           dark:border-gray-500">
-      <p class="mt-6 text-lg md:text-xl">
-        <strong>About Me:</strong>  I am a Computer Science major graduating on May 18, 2025 from Bucknell University. I grew up in Coal Township, PA and went to Our Lady of Lourdes Regional School. In my free time, I enjoy spending time with family and friends or shooting pool! My favorite song to listen to is The Sweet Escape by Gwen Stefani.<br><br>
-        <strong>Fun Fact:</strong>  I was born in Lewisburg, PA (which means I was always meant to come to Bucknell...right?).
-      </p>
+  <body class="bg-gray-100 text-gray-900 dark:bg-gray-900 dark:text-gray-100">
+    <div class="container mx-auto px-4 py-8">
+      <div class="bg-white shadow-lg rounded-xl p-6 md:p-10 text-center dark:bg-gray-800 dark:text-gray-200">
+        <img
+          src={~p"/images/SeniorPortrait.jpg"}
+          alt="High school senior portrait of Ashley Albert"
+          class="w-48 h-48 mx-auto rounded-full border-4 border-gray-300 shadow-md object-cover
+           dark:border-gray-500"
+        />
+        <p class="mt-6 text-lg md:text-xl">
+          <strong>About Me:</strong>
+          I am a Computer Science major graduating on May 18, 2025 from Bucknell University. I grew up in Coal Township, PA and went to Our Lady of Lourdes Regional School. In my free time, I enjoy spending time with family and friends or shooting pool! My favorite song to listen to is The Sweet Escape by Gwen Stefani.<br /><br />
+          <strong>Fun Fact:</strong>
+          I was born in Lewisburg, PA (which means I was always meant to come to Bucknell...right?).
+        </p>
+      </div>
+
+      <div class="mt-8 bg-white shadow-lg rounded-xl p-6 md:p-10 dark:bg-gray-800 dark:text-gray-200">
+        <h2 class="text-2xl font-semibold text-center text-gray-700 dark:text-white">
+          Programming Languages
+        </h2>
+        <ol class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 mt-4 text-center">
+          <li class="bg-gray-200 rounded-lg py-2 dark:bg-gray-500">
+            <span class="font-semibold text-blue-900 dark:text-gray-300">Python</span>
+          </li>
+          <li class="bg-gray-200 rounded-lg py-2 dark:bg-gray-500">
+            <span class="font-semibold text-blue-900 dark:text-gray-300">JavaScript</span>
+          </li>
+          <li class="bg-gray-200 rounded-lg py-2 dark:bg-gray-500">
+            <span class="font-semibold text-blue-900 dark:text-gray-300">Java</span>
+          </li>
+          <li class="bg-gray-200 rounded-lg py-2 dark:bg-gray-500">
+            <span class="font-semibold text-blue-900 dark:text-gray-300">C</span>
+          </li>
+          <li class="bg-gray-200 rounded-lg py-2 dark:bg-gray-500">
+            <span class="font-semibold text-blue-900 dark:text-gray-300">R</span>
+          </li>
+          <li class="bg-gray-200 rounded-lg py-2 dark:bg-gray-500">
+            <span class="font-semibold text-blue-900 dark:text-gray-300">Haskell</span>
+          </li>
+          <li class="bg-gray-200 rounded-lg py-2 dark:bg-gray-500">
+            <span class="font-semibold text-blue-900 dark:text-gray-300">Prolog</span>
+          </li>
+          <li class="bg-gray-200 rounded-lg py-2 dark:bg-gray-500">
+            <span class="font-semibold text-blue-900 dark:text-gray-300">C#</span>
+          </li>
+          <li class="bg-gray-200 rounded-lg py-2 dark:bg-gray-500">
+            <span class="font-semibold text-blue-900 dark:text-gray-300">C++</span>
+          </li>
+          <li class="bg-gray-200 rounded-lg py-2 dark:bg-gray-500">
+            <span class="font-semibold text-blue-900 dark:text-gray-300">PHP</span>
+          </li>
+          <li class="bg-gray-200 rounded-lg py-2 dark:bg-gray-500">
+            <span class="font-semibold text-blue-900 dark:text-gray-300">RISC-V</span>
+          </li>
+          <li class="bg-gray-200 rounded-lg py-2 dark:bg-gray-500">
+            <span class="font-semibold text-blue-900 dark:text-gray-300">HTML</span>
+          </li>
+          <li class="bg-gray-200 rounded-lg py-2 dark:bg-gray-500">
+            <span class="font-semibold text-blue-900 dark:text-gray-300">CSS</span>
+          </li>
+        </ol>
+      </div>
     </div>
 
-    <div class="mt-8 bg-white shadow-lg rounded-xl p-6 md:p-10 dark:bg-gray-800 dark:text-gray-200">
-      <h2 class="text-2xl font-semibold text-center text-gray-700 dark:text-white">Programming Languages</h2>
-      <ol class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 mt-4 text-center">
-        <li class="bg-gray-200 rounded-lg py-2 dark:bg-gray-500">
-        <span class="font-semibold text-blue-900 dark:text-gray-300">Python</span></li>
-        <li class="bg-gray-200 rounded-lg py-2 dark:bg-gray-500">
-        <span class="font-semibold text-blue-900 dark:text-gray-300">JavaScript</span></li>
-        <li class="bg-gray-200 rounded-lg py-2 dark:bg-gray-500">
-        <span class="font-semibold text-blue-900 dark:text-gray-300">Java</span></li>
-        <li class="bg-gray-200 rounded-lg py-2 dark:bg-gray-500">
-        <span class="font-semibold text-blue-900 dark:text-gray-300">C</span></li>
-        <li class="bg-gray-200 rounded-lg py-2 dark:bg-gray-500">
-        <span class="font-semibold text-blue-900 dark:text-gray-300">R</span></li>
-        <li class="bg-gray-200 rounded-lg py-2 dark:bg-gray-500">
-        <span class="font-semibold text-blue-900 dark:text-gray-300">Haskell</span></li>
-        <li class="bg-gray-200 rounded-lg py-2 dark:bg-gray-500">
-        <span class="font-semibold text-blue-900 dark:text-gray-300">Prolog</span></li>
-        <li class="bg-gray-200 rounded-lg py-2 dark:bg-gray-500">
-        <span class="font-semibold text-blue-900 dark:text-gray-300">C#</span></li>
-        <li class="bg-gray-200 rounded-lg py-2 dark:bg-gray-500">
-        <span class="font-semibold text-blue-900 dark:text-gray-300">C++</span></li>
-        <li class="bg-gray-200 rounded-lg py-2 dark:bg-gray-500">
-        <span class="font-semibold text-blue-900 dark:text-gray-300">PHP</span></li>
-        <li class="bg-gray-200 rounded-lg py-2 dark:bg-gray-500">
-        <span class="font-semibold text-blue-900 dark:text-gray-300">RISC-V</span></li>
-        <li class="bg-gray-200 rounded-lg py-2 dark:bg-gray-500">
-        <span class="font-semibold text-blue-900 dark:text-gray-300">HTML</span></li>
-        <li class="bg-gray-200 rounded-lg py-2 dark:bg-gray-500">
-        <span class="font-semibold text-blue-900 dark:text-gray-300">CSS</span></li>
-      </ol>
-    </div>
-  </div>
-
-  <%!-- <div class="container mx-auto px-4 py-8 text-center">
+    <%!-- <div class="container mx-auto px-4 py-8 text-center">
     <h2 class="text-2xl font-semibold mb-4 text-gray-700 dark:text-gray-300">Badges & Buttons</h2>
 
     <div class="flex flex-wrap justify-center gap-4 mb-4">
@@ -70,15 +91,5 @@
       <.tag color="red">Error Tag</.tag>
     </div>
   </div> --%>
-
-  <button type="button" phx-click={AppWeb.Components.UI.Modal.open_modal()} class="block text-white bg-blue-700 hover:bg-blue-800 font-medium rounded-lg text-sm px-5 py-2.5">
-  Toggle Modal
-</button>
-
-<.modal heading="Great Modal" backdrop="static" small>
-        This is my fantastic modal.
-      </.modal>
-
-</body>
+  </body>
 </html>
-
