--- a/lib/app_web/controllers/message_html/message_form.html.heex
+++ b/lib/app_web/controllers/message_html/message_form.html.heex
@@ -6,6 +6,6 @@
   <.input field={f[:subject]} type="text" label="Subject" />
   <.input field={f[:message]} type="text" label="Message" />
   <:actions>
-    <.button>Save Message</.button>
+    <.button type="submit">Save Message</.button>
   </:actions>
 </.simple_form>
