--- a/lib/app_web/components/layouts/app.html.heex
+++ b/lib/app_web/components/layouts/app.html.heex
@@ -69,14 +69,6 @@
           </path>
         </svg>
       </button>
-
-      <button
-        type="button"
-        phx-click={AppWeb.Components.UI.Modal.open_modal()}
-        class="block text-white bg-blue-700 hover:bg-blue-800 font-medium rounded-lg text-sm px-5 py-2.5"
-      >
-        Contact Us
-      </button>
     </div>
   </div>
 </nav>
@@ -90,9 +82,9 @@
 
 <.modal heading="Contact us" backdrop="static" small>
  <.simple_form :let={f} for={@message_changeset} action={~p"/messages"} class="mb-6">
-  <.error :if={@message_changeset.action}>
+  <%!-- <.error :if={@message_changeset.action}>
     Oops, something went wrong! Please check the errors below.
-  </.error>
+  </.error> --%>
   <.input field={f[:email]} type="text" label="Email" />
   <.input field={f[:subject]} type="text" label="Subject" />
   <.input field={f[:message]} type="text" label="Message" />
