--- a/lib/app_web/controllers/message_html/message_form.html.heex
+++ b/lib/app_web/controllers/message_html/message_form.html.heex
@@ -1,11 +1,11 @@
 <.simple_form :let={f} for={@changeset} action={@action} class="mb-6">
-  <.error :if={@changeset.action}>
+  <%!-- <.error :if={@changeset.action}>
     Oops, something went wrong! Please check the errors below.
-  </.error>
+  </.error> --%>
   <.input field={f[:email]} type="text" label="Email" />
   <.input field={f[:subject]} type="text" label="Subject" />
   <.input field={f[:message]} type="text" label="Message" />
   <:actions>
-    <.button type="submit">Save Message</.button>
+    <.button color="alternative" type="submit">Save Message</.button>
   </:actions>
 </.simple_form>
