--- a/lib/app_web/components/layouts/app.html.heex
+++ b/lib/app_web/components/layouts/app.html.heex
@@ -89,7 +89,7 @@
   <.input field={f[:subject]} type="text" label="Subject" />
   <.input field={f[:message]} type="text" label="Message" />
   <:actions>
-    <.button type="submit"> Save Message </.button>
+    <.button type="submit" color="alternative"> Save Message </.button>
   </:actions>
 </.simple_form>
 </.modal>
