--- a/lib/app_web/live/topic_live/show.html.heex
+++ b/lib/app_web/live/topic_live/show.html.heex
@@ -2,7 +2,7 @@
   Topic {@topic.id}
   <:subtitle>This is a topic record from your database.</:subtitle>
   <:actions>
-    <.link patch={~p"/topics/#{@topic}/show/edit"} phx-click={JS.push_focus()}>
+    <.link patch={~p"/topics/#{@topic.slug}/show/edit"} phx-click={JS.push_focus()}>
       <.button>Edit topic</.button>
     </.link>
   </:actions>
@@ -15,7 +15,12 @@
 
 <.back navigate={~p"/topics"}>Back to topics</.back>
 
-<.modal :if={@live_action == :edit} id="topic-modal" show on_cancel={JS.patch(~p"/topics/#{@topic}")}>
+<.modal
+  :if={@live_action == :edit}
+  id="topic-modal"
+  show
+  on_cancel={JS.patch(~p"/topics/#{@topic}")}
+>
   <.live_component
     module={AppWeb.TopicLive.FormComponent}
     id={@topic.id}
