--- a/lib/app_web/live/topic_live/index.html.heex
+++ b/lib/app_web/live/topic_live/index.html.heex
@@ -10,15 +10,15 @@
 <.table
   id="topics"
   rows={@streams.topics}
-  row_click={fn {_id, topic} -> JS.navigate(~p"/topics/#{topic}") end}
+  row_click={fn {_id, topic} -> JS.navigate(~p"/topics/#{topic.slug}") end}
 >
   <:col :let={{_id, topic}} label="Slug">{topic.slug}</:col>
   <:col :let={{_id, topic}} label="Title">{topic.title}</:col>
   <:action :let={{_id, topic}}>
     <div class="sr-only">
-      <.link navigate={~p"/topics/#{topic}"}>Show</.link>
+      <.link navigate={~p"/topics/#{topic.slug}"}>Show</.link>
     </div>
-    <.link patch={~p"/topics/#{topic}/edit"}>Edit</.link>
+    <.link patch={~p"/topics/#{topic.slug}/edit"}>Edit</.link>
   </:action>
   <:action :let={{id, topic}}>
     <.link
@@ -30,7 +30,12 @@
   </:action>
 </.table>
 
-<.modal :if={@live_action in [:new, :edit]} id="topic-modal" show on_cancel={JS.patch(~p"/topics")}>
+<.modal
+  :if={@live_action in [:new, :edit]}
+  id="topic-modal"
+  show
+  on_cancel={JS.patch(~p"/topics")}
+>
   <.live_component
     module={AppWeb.TopicLive.FormComponent}
     id={@topic.id || :new}
