--- a/lib/app_web/live/topic_live/index.html.heex
+++ b/lib/app_web/live/topic_live/index.html.heex
@@ -20,14 +20,17 @@
     </div>
     <.link patch={~p"/topics/#{topic.slug}/edit"}>Edit</.link>
   </:action>
-  <:action :let={{id, topic}}>
+  <:action :let={{slug, topic}}>
     <.link
-      phx-click={JS.push("delete", value: %{id: topic.id}) |> hide("##{id}")}
+      phx-click={JS.push("delete", value: %{slug: topic.slug}) |> hide("##{slug}")}
       data-confirm="Are you sure?"
     >
       Delete
     </.link>
   </:action>
+  <%!-- <:action :let={{_id, topic}}>
+    <.link patch={~p"/topics/#{topic.slug}/new_page"}>New Page</.link>
+  </:action> --%>
 </.table>
 
 <.modal
@@ -38,7 +41,7 @@
 >
   <.live_component
     module={AppWeb.TopicLive.FormComponent}
-    id={@topic.id || :new}
+    id={@topic.slug || :new}
     title={@page_title}
     action={@live_action}
     topic={@topic}
