--- a/lib/app_web/live/topic_live/show.html.heex
+++ b/lib/app_web/live/topic_live/show.html.heex
@@ -2,8 +2,11 @@
   Topic {@topic.id}
   <:subtitle>This is a topic record from your database.</:subtitle>
   <:actions>
-    <.link patch={~p"/topics/#{@topic.slug}/show/edit"} phx-click={JS.push_focus()}>
+    <.link patch={~p"/topics/#{@topic.slug}/edit"} phx-click={JS.push_focus()}>
       <.button>Edit topic</.button>
+    </.link>
+    <.link patch={~p"/topics/#{@topic.slug}/pages"}>
+      <.button>View Pages</.button>
     </.link>
   </:actions>
 </.header>
@@ -23,7 +26,7 @@
 >
   <.live_component
     module={AppWeb.TopicLive.FormComponent}
-    id={@topic.id}
+    id={@topic.slug}
     title={@page_title}
     action={@live_action}
     topic={@topic}
