--- a/lib/app_web/live/page_live/show.html.heex
+++ b/lib/app_web/live/page_live/show.html.heex
@@ -12,7 +12,7 @@
   <:item title="Content">{@page.content}</:item>
 </.list>
 
-<.back navigate={~p"/topics/#{@page.topic.slug}/pages"}>Back to pages</.back>
+<.back navigate={~p"/topics/#{@topic.slug}/pages"}>Back to pages</.back>
 
 <.modal id="page-modal" :if={@live_action == :edit} id="page-modal" show on_cancel={JS.patch(~p"/topics/#{@page.topic.slug}/pages.#{@page.id || :new}")}>
   <.live_component
@@ -21,6 +21,6 @@
     title={@page_title}
     action={@live_action}
     page={@page}
-    patch={~p"/topics/#{@page.topic.slug}/pages/#{@page.id || :new}"}
+    patch={~p"/topics/#{@topic.slug}/pages/#{@page.id || :new}"}
   />
 </.modal>
