--- a/lib/app_web/live/page_live/show.html.heex
+++ b/lib/app_web/live/page_live/show.html.heex
@@ -2,7 +2,7 @@
   Page {@page.id || "New"}
   <:subtitle>This is a page record from your database.</:subtitle>
   <:actions>
-    <.link patch={~p"/topics//#{@topic.slug}/pages/#{@page.id || :new}/edit"} phx-click={JS.push_focus()}>
+    <.link patch={~p"/topics/#{@topic.slug}/pages/#{@page.id || :new}/edit"} phx-click={JS.push_focus()}>
       <.button>Edit page</.button>
     </.link>
   </:actions>
@@ -14,7 +14,12 @@
 
 <.back navigate={~p"/topics/#{@topic.slug}/pages"}>Back to pages</.back>
 
-<.modal id="page-modal" :if={@live_action == :edit} id="page-modal" show on_cancel={JS.patch(~p"/topics/#{@page.topic.slug}/pages.#{@page.id || :new}")}>
+<.modal
+  id="page-modal"
+  :if={@live_action == :edit}
+  show
+  on_cancel={JS.patch(~p"/topics/#{@topic.slug}/pages/#{@page.id}")}
+>
   <.live_component
     module={AppWeb.PageLive.FormComponent}
     id={@page.id || :new}
