--- a/lib/app_web/live/page_live/index.html.heex
+++ b/lib/app_web/live/page_live/index.html.heex
@@ -2,7 +2,7 @@
   Listing Pages
   <:actions>
     <.link patch={~p"/topics/#{@topic.slug}/pages/new"}>
-      <.button>New Page</.button>
+      <.button color="alternative">New Page</.button>
     </.link>
   </:actions>
 </.header>
