--- a/lib/app_web/live/topic_live/index.html.heex
+++ b/lib/app_web/live/topic_live/index.html.heex
@@ -2,7 +2,7 @@
   Listing Topics
   <:actions>
     <.link patch={~p"/topics/new"}>
-      <.button>New Topic</.button>
+      <.button color="alternative">New Topic</.button>
     </.link>
   </:actions>
 </.header>
