--- a/lib/app_web/live/topic_live/show.html.heex
+++ b/lib/app_web/live/topic_live/show.html.heex
@@ -3,10 +3,10 @@
   <:subtitle>This is a topic record from your database.</:subtitle>
   <:actions>
     <.link patch={~p"/topics/#{@topic.slug}/edit"} phx-click={JS.push_focus()}>
-      <.button>Edit topic</.button>
+      <.button color="alternative">Edit topic</.button>
     </.link>
     <.link patch={~p"/topics/#{@topic.slug}/pages"}>
-      <.button>View Pages</.button>
+      <.button color="alternative">View Pages</.button>
     </.link>
   </:actions>
 </.header>
@@ -22,7 +22,7 @@
   :if={@live_action == :edit}
   id="topic-modal"
   show
-  on_cancel={JS.patch(~p"/topics/#{@topic}")}
+  on_cancel={JS.patch(~p"/topics/#{@topic.slug}")}
 >
   <.live_component
     module={AppWeb.TopicLive.FormComponent}
