--- a/lib/app_web/live/item_live/index.html.heex
+++ b/lib/app_web/live/item_live/index.html.heex
@@ -15,13 +15,7 @@
   <:col :let={{_id, item}} label="Name">{item.name}</:col>
   <%!-- <:col :let={{_id, item}} label="Attributes">{item.attributes}</:col> --%>
 
-  <:col :let={{_id, item}} label="Attributes">
-    <%= if is_map(item.attributes) do %>
-      <%= Map.values(item.attributes) |> Enum.count(& &1) %>
-    <% else %>
-      <%= item.attributes %>
-    <% end %>
-  </:col>
+  <:col :let={{_id, item}} label="Attributes">{attribute_count(item)}</:col>
   <:action :let={{_id, item}}>
     <div class="sr-only">
       <.link navigate={~p"/items/#{item}"}>Show</.link>
