Wokring on gettext

--- a/lib/app_web/controllers/message_html/edit.html.heex
+++ b/lib/app_web/controllers/message_html/edit.html.heex
@@ -1,4 +1,4 @@
-<.header>
+<.header class="dark:text-white">
   Edit Message {@message.id}
   <:subtitle>Use this form to manage message records in your database.</:subtitle>
 </.header>
