--- a/lib/app_web/controllers/message_html/index.html.heex
+++ b/lib/app_web/controllers/message_html/index.html.heex
@@ -3,7 +3,7 @@
     All Messages
   </div>
   <:actions>
-    <.link href={~p"/messages/new"}>
+    <.link class="dark:text-white" href={~p"/messages/new"}>
       <.button color="alternative">New Message</.button>
     </.link>
   </:actions>
