--- a/lib/app_web/controllers/page_html/home.html.heex
+++ b/lib/app_web/controllers/page_html/home.html.heex
@@ -17,10 +17,10 @@
            dark:border-gray-500"
         />
         <p class="mt-6 text-lg md:text-xl">
-          <strong>About Me:</strong>
-          I am a Computer Science major graduating on May 18, 2025 from Bucknell University. I grew up in Coal Township, PA and went to Our Lady of Lourdes Regional School. In my free time, I enjoy spending time with family and friends or shooting pool! My favorite song to listen to is The Sweet Escape by Gwen Stefani.<br /><br />
-          <strong>Fun Fact:</strong>
-          I was born in Lewisburg, PA (which means I was always meant to come to Bucknell...right?).
+          <strong>{gettext("About Me:")}</strong>
+          {gettext("I am a Computer Science major graduating on May 18, 2025 from Bucknell University. I grew up in Coal Township, PA and went to Our Lady of Lourdes Regional School. In my free time, I enjoy spending time with family and friends or shooting pool! My favorite song to listen to is The Sweet Escape by Gwen Stefani.")}<br /><br />
+          <strong>{gettext("Fun Fact:")}</strong>
+          {gettext("I was born in Lewisburg, PA (which means I was always meant to come to Bucknell...right?).")}
         </p>
       </div>
 
