--- a/lib/app_web/live/page_live/index.html.heex
+++ b/lib/app_web/live/page_live/index.html.heex
@@ -1,4 +1,4 @@
-<.header>
+<.header class="dark:text-white">
   Listing Pages
   <:actions>
     <.link patch={~p"/topics/#{@topic.slug}/pages/new"}>
