--- a/lib/app_web/components/layouts/app.html.heex
+++ b/lib/app_web/components/layouts/app.html.heex
@@ -69,6 +69,7 @@
           </path>
         </svg>
       </button>
+        <.language_toggle locale={@locale} />
     </div>
   </div>
 </nav>
@@ -85,9 +86,9 @@
   <%!-- <.error :if={@message_changeset.action}>
     Oops, something went wrong! Please check the errors below.
   </.error> --%>
-  <.input field={f[:email]} type="text" label="Email" />
-  <.input field={f[:subject]} type="text" label="Subject" />
-  <.input field={f[:message]} type="text" label="Message" />
+  <.input field={f[:email]} class="dark:text-white" type="text" label="Email" />
+  <.input field={f[:subject]} class="dark:text-white" type="text" label="Subject" />
+  <.input field={f[:message]} class="dark:text-white" type="text" label="Message" />
   <:actions>
     <.button type="submit" color="alternative"> Save Message </.button>
   </:actions>
