--- a/lib/app_web/controllers/message_html/message_form.html.heex
+++ b/lib/app_web/controllers/message_html/message_form.html.heex
@@ -2,9 +2,9 @@
   <%!-- <.error :if={@changeset.action}>
     Oops, something went wrong! Please check the errors below.
   </.error> --%>
-  <.input field={f[:email]} type="text" label="Email" />
-  <.input field={f[:subject]} type="text" label="Subject" />
-  <.input field={f[:message]} type="text" label="Message" />
+  <.input field={f[:email]} type="text" label="Email" class="dark:text-white" />
+  <.input field={f[:subject]} type="text" label="Subject" class="dark:text-white" />
+  <.input field={f[:message]} type="text" label="Message" class="dark:text-white" />
   <:actions>
     <.button color="alternative" type="submit">Save Message</.button>
   </:actions>
